tests/baselines/reference/invalidOptionalChainFromNewExpression.errors.txt
invalidOptionalChainFromNewExpression.ts(5,6): error TS1209: Invalid optional chain from new expression. Did you mean to call 'A()'?


==== invalidOptionalChainFromNewExpression.ts (1 errors) ====
    class A {
        b() {}
    }
    
    new A?.b()   // error
         ~~
!!! error TS1209: Invalid optional chain from new expression. Did you mean to call 'A()'?
    new A()?.b() // ok
    